# AutoNod-for-Claude-code

./: .gitignore  Cargo.toml  DESIGN.md  README.md  agent.py  decider.py  ocr.py  ocr_paddle.py  parser.py  picker.py  requirements.txt  state.py
prompts/: decide_system.txt  yes_to_proceed.txt
src/: decider.rs  lib.rs  llm.rs  main.rs  pane.rs  parser.rs  state.rs  tmux.rs
tests/: smoke_tmux.sh  test_decider_rule.py  test_fixtures.py  test_parser.py  test_pipeline_integration.py
tests/fixtures/: README.md  claude_code_three_options.txt  free_text_input.txt  inline_yn.txt  noise_line_with_one_dot_one.txt  recommended_split_across_lines.txt  scrollback_above_live_prompt.txt
